# Phyzz

./: CMakeCache.txt  CMakeLists.txt  Makefile  Phyzz.cbp  README.md  cmake_install.cmake
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp
imgui/.github/workflows/: build.yml
imgui/impl/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
imgui/impl/example_allegro5/: main.cpp
imgui/impl/example_apple_opengl2/: main.mm
imgui/impl/example_emscripten/: main.cpp
imgui/impl/example_glfw_metal/: main.mm
imgui/impl/example_glfw_opengl2/: main.cpp
imgui/impl/example_glfw_opengl3/: main.cpp
imgui/impl/example_glfw_vulkan/: main.cpp
imgui/impl/example_glut_opengl2/: main.cpp
imgui/impl/example_marmalade/: main.cpp
imgui/impl/example_sdl_directx11/: main.cpp
imgui/impl/example_sdl_metal/: main.mm
imgui/impl/example_sdl_opengl2/: main.cpp
imgui/impl/example_sdl_opengl3/: main.cpp
imgui/impl/example_sdl_vulkan/: main.cpp
imgui/impl/example_win32_directx10/: main.cpp
imgui/impl/example_win32_directx11/: main.cpp
imgui/impl/example_win32_directx12/: main.cpp
imgui/impl/example_win32_directx9/: main.cpp
imgui/impl/libs/gl3w/GL/: gl3w.h
src/: App.cpp  App.h  Consts.h  Main.cpp
src/Exceptions/: GlfwException.h
src/Logging/: PLogger.cpp  PLogger.h
src/Physics/: Field.cpp  Field.h  PSimulation.cpp  PSimulation.h
src/Toolkit/: Solver.cpp  Solver.h
